Set version and package name in @bltzr-gg NPM repo

--- a/packages/ord-connect/package.json
+++ b/packages/ord-connect/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ordzaar/ord-connect",
-  "version": "0.0.0",
+  "name": "@bltzr-gg/ord-connect",
+  "version": "1.0.0",
   "description": "React component library for Bitcoin Ordinals and Sado Protocol Connections",
   "repository": "https://github.com/ordzaar/ord-connect",
   "bugs": "https://github.com/ordzaar/ord-connect/issues",
